--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Texto HTML     
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Web Pages</title>
+</head>
+<body>
+</body>
+</html> 
